Replace the deprecated new Integer() with Integer.valueOf()
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>