@@ -133,8 +133,9 @@ public class CompoundGraphDemo extends AbstractGraphDemo {
 		CompoundDirectedGraph graph = null;
 		try {
 			graph = (CompoundDirectedGraph) (CompoundGraphTests.class
-					.getMethod(graphMethod, new Class[] { int.class }).invoke(
-					null, new Object[] { new Integer(graphDirection) }));
+					.getMethod(graphMethod, new Class[] { int.class })
+					.invoke(null,
+							new Object[] { Integer.valueOf(graphDirection) }));
 		} catch (Exception e) {
 			System.out.println("Could not build graph");
 		}
@@ -151,7 +152,8 @@ public class CompoundGraphDemo extends AbstractGraphDemo {
 
 		int nameIndex = 0;
 		for (int i = 0; i < methods.length; i++) {
-			if (methods[i].getReturnType().equals(CompoundDirectedGraph.class)) {
+			if (methods[i].getReturnType()
+					.equals(CompoundDirectedGraph.class)) {
 				methodNames[nameIndex] = methods[i].getName();
 				nameIndex++;
 			}
