@@ -281,7 +281,7 @@ public class GuideEditPart extends AbstractGraphicalEditPart {
 
 	public void updateLocationOfFigures(int position) {
 		getRulerEditPart().setLayoutConstraint(this, getFigure(),
-				new Integer(position));
+				Integer.valueOf(position));
 		Point guideFeedbackLocation = getGuideLineFigure().getBounds()
 				.getLocation();
 		if (isHorizontal()) {
